# ROW

./: CMakeLists.txt  README.md  main.cpp
src/: config.h  cpp_accumulator.cpp  experiments.h  interface.h  num_threads.cpp  num_threads.h  omp_accumulator.c  run_experiments.cpp
